fixed ios search positioning and z-index issue

--- a/html/styles.css
+++ b/html/styles.css
@@ -128,8 +128,8 @@ h2, h3, a, input{
 }
 
 #search-form{
-    display: block;
-    width: 80%;
+    display: flex;
+    width: 352px;
     margin: auto auto 20px auto;
 }
 
@@ -145,33 +145,33 @@ h2, h3, a, input{
 }
 
 #search-form button{
-    border:none;
     box-sizing: border-box;
     color:rgb(227, 239, 242);
     cursor: pointer;
-    border: none;
+    border: 2px solid rgb(50, 106, 134);
     border-radius:0 5px 5px 0;
     height: 28px;
     width: 26px;
     background-color: rgb(50, 106, 134);
     background-image: url("/images/search_white.png");
     background-size: 20px auto;
-    background-position: 2px;
+    background-position: 0 2px;
     background-repeat: no-repeat;
-    position: relative;
-    top: -4px;
 }
 
 #autocomplete{
     width: 322px;
     left: 50%;
-    transform: translateX(-172px) translateY(-26px);
+    margin-left: -172px;
+    margin-top: -22px;
     position: absolute;
     background-color:#fffdf9;
+    transform: translate3d(0, 0, 200px);
     border: 2px solid rgb(50, 106, 134);
     border-top: none;
     box-sizing: border-box;
     box-shadow: 0 3px 3px rgba(0, 0, 0, 30%);
+    z-index: 8;
 }
 
 #autocomplete a{
@@ -193,6 +193,8 @@ h2, h3, a, input{
     row-gap: 25px;
     overflow-y: scroll;
     margin: 0 0 15px 0;
+    position: relative;
+    z-index: 0;
 }
 
 .categories-container > a{
@@ -202,6 +204,7 @@ h2, h3, a, input{
     background-position: top center;
     background-repeat: no-repeat;
     display: flex;
+    z-index: 0;
     justify-content: center;
 }
 
@@ -264,10 +267,6 @@ h2, h3, a, input{
 }
 
 @media (min-width:480px){
-
-    #search-form{
-        width: 352px;;
-    }
 
     .tenRandom-container, .category-container, .area-container, .search-results-container{
         grid-template-columns: repeat(3, 1fr);
